--- a/.github/actions/publish-node/action.yml
+++ b/.github/actions/publish-node/action.yml
@@ -18,6 +18,7 @@ runs:
         node-version: 20.11.0
         cache: "npm"
         cache-dependency-path: "codegen/node/package.json"
+        registry-url: 'https://registry.npmjs.org'
 
     - name: Typescript Transpile
       shell: bash
